--- a/server/config.json
+++ b/server/config.json
@@ -8,7 +8,8 @@
   },
   "Server": {
     "ListenAddr": ":8080",
-    "HardwareID": "hub-001"
+    "HardwareID": "hub-001",
+    "ManagerToken": "a-super-secret-manager-token"
   },
   "Relay": {
     "Enabled": false,
