--- a/web/tsconfig.app.json
+++ b/web/tsconfig.app.json
@@ -4,6 +4,8 @@
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+  "module": "ESNext",
+  "moduleResolution": "Bundler",
 
     "paths": {
       "@/*": ["./src/*"]
