binary-only: purge JSON protocol usage, add binproto codecs and routes; cleanup .exe; docs updated

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,6 +13,26 @@
 				"$go"
 			],
 			"group": "build"
+		},
+		{
+			"label": "go-build-server",
+			"type": "shell",
+			"command": "go",
+			"args": [
+				"build",
+				"./..."
+			],
+			"group": "build"
+		},
+		{
+			"label": "go-build-server",
+			"type": "shell",
+			"command": "go",
+			"args": [
+				"build",
+				"./..."
+			],
+			"group": "build"
 		}
 	]
 }
