--- a/server/config.json
+++ b/server/config.json
@@ -10,6 +10,7 @@
     "ListenAddr": ":8080",
     "HardwareID": "hub-001",
     "ManagerToken": "a-super-secret-manager-token",
+  "RelayToken": "",
     "DefaultAdmin": {
       "Username": "admin",
       "Password": "admin123!"
@@ -19,6 +20,7 @@
     "Enabled": false,
     "ParentAddr": "ws://localhost:8080/ws",
     "ListenAddr": ":8081",
-    "HardwareID": "relay-001"
+  "HardwareID": "relay-001",
+  "SharedToken": ""
   }
 }
