实现: 审批加入节点功能 重构: 改动验证逻辑，同时应用于web client

--- a/server/config.json
+++ b/server/config.json
@@ -10,7 +10,7 @@
     "ListenAddr": ":8080",
     "HardwareID": "hub-001",
     "ManagerToken": "a-super-secret-manager-token",
-  "RelayToken": "",
+    "RelayToken": "RelayToken",
     "DefaultAdmin": {
       "Username": "admin",
       "Password": "admin123!"
